[package]
name = "gw2_mumble"
version = "0.1.0"
edition = "2021"
authors = ["Zerthox"]
repository = "https://github.com/zerthox/gw2-mumble-rs"

[dependencies]
bitflags = "1.3.2"
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_json = { version = "1.0.93", optional = true }
serde_repr = { version = "0.1.10", optional = true }
thiserror = "1.0.38"
windows = { version = "0.44.0", features = [
    "System",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
] }

[features]
serde = ["dep:serde", "dep:serde_repr"]
json = ["serde", "dep:serde_json"]
